// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render Expenses Summary correctly with a single expense 1`] = `
<div>
  <h2>
    Viewing 
    1
     
    expense
     totalling 
    $2.35
  </h2>
</div>
`;

exports[`should render Expenses Summary correctly with multiple expenses 1`] = `
<div>
  <h2>
    Viewing 
    23
     
    expenses
     totalling 
    $2,312,354.25
  </h2>
</div>
`;
